[project]
name = "services-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt>=1.21.0",
    "duckdb>=1.4.4",
    "marimo>=0.19.7",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyzmq>=27.1.0",
    "scipy>=1.14.0",
]
